# uc_web

./: .gitignore  README.md  manage.py  pyproject.toml
uc_web/: api.py  asgi.py  models.py  pages.py  settings.py  urls.py  views.py  wsgi.py
uc_web/templates/: addPost.html  login.html  main.html  postDetail.html  register.html
