[tool.poetry]
name = "uc-web"
version = "0.1.0"
description = ""
authors = ["Kikoring <kyr4624@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
mysql-to-sqlite3 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
